# zonnetje

./: .gitignore  CMakeLists.txt  README.md  REAME1.md
src/: CMakeLists.txt  ZonnetjeConfig.h.in  zon.c
src/.deps/: astro.Po  zon-zon.Tpo  zon.Po
